# kroos_indexation

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/: classifier.py  config.py
src/db/: migrate.py  postgres.py
src/db/migrations/: 001_sessions.sql  002_messages.sql  003_quotes.sql  004_indexed_files.sql  005_document_profiles.sql
src/monitoring/: agent.py  profiler.py  run.py  stats_agent.py  store.py  summary.py
src/parsers/: excel.py  pdf.py  word.py
src/pipeline/: _base.py  index_documents.py  index_manufacturers.py  index_quotes.py  index_requests.py
src/processing/: chunker.py  embedder.py
src/vector/: client_requests.py  collections.py  manufacturers.py  qdrant.py  quotes.py
tests/: test_chunker.py  test_classifier.py  test_pipeline_base.py  test_stats_agent.py
